k8s/realworld-flux-stack/dev/platform/envoy/routes/apps/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apps
  namespace: envoy-system
  labels:
    gateway: envoy-gateway
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-system
      sectionName: https
  hostnames:
    - "mydevopsjourney.fun"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: frontend
          namespace: realworld-app
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
